# Crew-AI-Demo

./: README.md
crew-ai-vehicle-agent/: requirements.txt
crew-ai-vehicle-agent/ai_vehicle_crew/: 2025_Sedan_Analysis_Report.md  README.md  pyproject.toml
crew-ai-vehicle-agent/ai_vehicle_crew/src/ai_vehicle_crew/: crew.py  main.py
crew-ai-vehicle-agent/ai_vehicle_crew/src/ai_vehicle_crew/config/: agents.yaml  tasks.yaml
