[project]
name = "ai_vehicle_crew"
version = "0.1.0"
description = "ai-vehicle-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
ai_vehicle_crew = "ai_vehicle_crew.main:run"
run_crew = "ai_vehicle_crew.main:run"
train = "ai_vehicle_crew.main:train"
replay = "ai_vehicle_crew.main:replay"
test = "ai_vehicle_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
